--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+## OAuth2 properties
 
+api.spotify.client-id=${SPOTIFY_CLIENT_ID}
+api.spotify.client-secret=${SPOTIFY_CLIENT_SECRET}
+api.spotify.scope=user-read-recently-played,user-read-private
+
+
+## DB Connection properties
