Created RestTemplate bean with Interceptor for easier Spotify API requests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-## OAuth2 properties
+## OAuth2 Spotify API properties
 
 api.spotify.client-id=${SPOTIFY_CLIENT_ID}
 api.spotify.client-secret=${SPOTIFY_CLIENT_SECRET}
-api.spotify.scope=user-read-recently-played,user-read-private
+api.spotify.scope=user-read-recently-played,user-read-private,user-top-read
 
 
 ## DB Connection properties
