Added CORS configuration to SecurityConfig and endpoint for authorizing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ api.spotify.client-id=${SPOTIFY_CLIENT_ID}
 api.spotify.client-secret=${SPOTIFY_CLIENT_SECRET}
 api.spotify.scope=user-read-recently-played,user-read-private,user-top-read,playlist-modify-public
 
+dev.react-app.url=http://localhost:3000
 
 ## DB Connection properties
