--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,28 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+react-app/node_modules
+react-app/.pnp
+react-app/.pnp.js
+
+# testing
+react-app/coverage
+
+# production
+react-app/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
