Refactored AppController changed return type in all endpoints and modified AppController Unit Tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-## OAuth2 Spotify API properties
-
+# OAuth2 properties
 api.spotify.client-id=${SPOTIFY_CLIENT_ID}
 api.spotify.client-secret=${SPOTIFY_CLIENT_SECRET}
 api.spotify.scope=user-read-recently-played,user-read-private,user-top-read,playlist-modify-public
 
+# dev properties
 dev.react-app.url=http://localhost:3000
 
-## DB Connection properties
+# prod properties
+prod.react-app.url=http://herokuapp.com
