Resolved bug in RestTemplate Integration tests

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,4 +5,5 @@ api.spotify.client-secret=${SPOTIFY_CLIENT_SECRET}
 api.spotify.scope=user-read-recently-played,user-read-private,user-top-read,playlist-modify-public
 
 
-## DB Connection properties
+
+dev.react-app.url=http://localhost:3000
