Modified properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ api.spotify.scope=user-read-recently-played,user-read-private,user-top-read,play
 dev.react-app.url=http://localhost:3000
 
 # prod properties
-prod.react-app.url=http://herokuapp.com
+prod.react-app.url=https://statly-app.onrender.com
