Added MvcConfig, changes in SecurityFilterChain bean

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,7 @@ api.spotify.client-id=${SPOTIFY_CLIENT_ID}
 api.spotify.client-secret=${SPOTIFY_CLIENT_SECRET}
 api.spotify.scope=user-read-recently-played,user-read-private,user-top-read,playlist-modify-public
 
-# dev properties
-dev.react-app.url=http://localhost:3000
-
-# prod properties
-prod.react-app.url=https://statly-app.onrender.com
+# security properties
+api.react-app.url=${STATLY_APP_URL}
+server.servlet.session.cookie.same-site=none
+server.servlet.session.cookie.secure=true
