--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,17 @@ api.spotify.client-secret=${SPOTIFY_CLIENT_SECRET}
 api.spotify.scope=user-read-recently-played,user-read-private,user-top-read,playlist-modify-public
 
 # security properties
-api.react-app.url=${STATLY_APP_URL}
 server.servlet.session.cookie.same-site=none
 server.servlet.session.cookie.secure=true
+
+# web properties
+api.react-app.url=${STATLY_APP_URL}
+
+# datasource properties
+spring.datasource.url=jdbc:mysql://localhost:3306/statly_user_stats
+spring.datasource.username=${STATLY_DB_USERNAME}
+spring.datasource.password=${STATLY_DB_PASSWORD}
+
+# hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl=none
