Added UserRespository, created User and UserTracks Entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # OAuth2 properties
 api.spotify.client-id=${SPOTIFY_CLIENT_ID}
 api.spotify.client-secret=${SPOTIFY_CLIENT_SECRET}
-api.spotify.scope=user-read-recently-played,user-read-private,user-top-read,playlist-modify-public
+api.spotify.scope=user-read-recently-played,user-read-private,user-read-email,user-top-read,playlist-modify-public
 
 # security properties
 server.servlet.session.cookie.same-site=none
