--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,17 @@
-## OAuth2 Spotify API properties
-
+# OAuth2 Spotify API properties
 api.spotify.client-id=${SPOTIFY_CLIENT_ID}
 api.spotify.client-secret=${SPOTIFY_CLIENT_SECRET}
 api.spotify.scope=user-read-recently-played,user-read-private,user-top-read,playlist-modify-public
 
 
+# web properties
+dev.react-app.url=${STATLY_APP_URL}
 
-dev.react-app.url=http://localhost:3000
+# datasource properties
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=user
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
