--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ server.servlet.session.cookie.secure=true
 api.react-app.url=${STATLY_APP_URL}
 
 # datasource properties
-spring.datasource.url=jdbc:mysql://localhost:3306/statly_user_stats
+spring.datasource.url=${STATLY_DB_URL}
 spring.datasource.username=${STATLY_DB_USERNAME}
 spring.datasource.password=${STATLY_DB_PASSWORD}
 
