Added functionality inside API for saving and finding all beta-users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ server.servlet.session.cookie.secure=true
 api.react-app.url=${STATLY_APP_URL}
 
 # datasource properties
-spring.datasource.url=${STATLY_DB_URL}
-spring.datasource.username=${STATLY_DB_USERNAME}
-spring.datasource.password=${STATLY_DB_PASSWORD}
+spring.datasource.url=${STATLY_DB_DEV_URL}
+spring.datasource.username=${STATLY_DB_DEV_USERNAME}
+spring.datasource.password=${STATLY_DB_DEV_PASSWORD}
 
 # hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
