Created StatsService, UserController, refactored Controllers and Services, secured beta-testers API endpoints inside SecurityFilterChain

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ api.spotify.scope=user-read-recently-played,user-read-private,user-read-email,us
 # security properties
 server.servlet.session.cookie.same-site=none
 server.servlet.session.cookie.secure=true
+statly.api.admin-email=${STATLY_ADMIN_EMAIL}
 
 # web properties
 api.react-app.url=${STATLY_APP_URL}
