--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,11 @@ spring.datasource.password=${STATLY_DB_DEV_PASSWORD}
 # hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl=none
+
+# spring mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${STATLY_MAIL_ADDRESS}
+spring.mail.password=${STATLY_MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
