Updated README, docs and created Integration tests for MailService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,9 @@ statly.api.admin-email=${STATLY_ADMIN_EMAIL}
 api.react-app.url=${STATLY_APP_URL}
 
 # datasource properties
-spring.datasource.url=${STATLY_DB_DEV_URL}
-spring.datasource.username=${STATLY_DB_DEV_USERNAME}
-spring.datasource.password=${STATLY_DB_DEV_PASSWORD}
+spring.datasource.url=${STATLY_DB_URL}
+spring.datasource.username=${STATLY_DB_USERNAME}
+spring.datasource.password=${STATLY_DB_PASSWORD}
 
 # hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
