--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,7 +5,8 @@ api.spotify.scope=user-read-recently-played,user-read-private,user-top-read,play
 
 
 # web properties
-dev.react-app.url=${STATLY_APP_URL}
+api.react-app.url=${STATLY_APP_URL}
+statly.api.admin-email=admin@mail.com
 
 # datasource properties
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
@@ -15,3 +16,10 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
+
+# spring mail
+spring.mail.host=127.0.0.1
+spring.mail.port=3025
+spring.mail.username=user
+spring.mail.password=admin
+spring.mail.protocol=smtp
