Dockerized statly-backend-api, added Dockerfile and docker-compose.yaml, modified pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -149,14 +149,15 @@
 			</build>
 		</profile>
 	</profiles>
-
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.laa66.statlyapp.StatlyappApplication</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
