--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.datasource.password=${STATLY_DB_PASSWORD}
 # hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl=none
+spring.jpa.show-sql=true
 
 # spring mail
 spring.mail.host=smtp.gmail.com
