Created JwtProvider bean, modified Security config and properties, fixed OAuth2UserWrapper getImages method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,28 +3,29 @@ api.spotify.client-id=${SPOTIFY_CLIENT_ID}
 api.spotify.client-secret=${SPOTIFY_CLIENT_SECRET}
 api.spotify.scope=user-read-recently-played,user-read-private,user-read-email,user-top-read,playlist-modify-public,playlist-modify-private,playlist-read-private,playlist-read-collaborative,ugc-image-upload
 
-# security properties
-server.servlet.session.cookie.same-site=none
-server.servlet.session.cookie.secure=true
+# security prop
 statly.api.admin-email=${STATLY_ADMIN_EMAIL}
 
-# web properties
+# web prop
 api.react-app.url=${STATLY_APP_URL}
 
-# datasource properties
+# datasource prop
 spring.datasource.url=${STATLY_DB_URL}
 spring.datasource.username=${STATLY_DB_USERNAME}
 spring.datasource.password=${STATLY_DB_PASSWORD}
 
-# hibernate
+# hibernate prop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl=none
 spring.jpa.show-sql=true
 
-# spring mail
+# spring mail prop
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${STATLY_MAIL_ADDRESS}
 spring.mail.password=${STATLY_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# JWT properties
+jwt.provider.secret=${STATLY_SECRET}
