--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,12 +3,9 @@ api.spotify.client-id=${SPOTIFY_CLIENT_ID}
 api.spotify.client-secret=${SPOTIFY_CLIENT_SECRET}
 api.spotify.scope=user-read-recently-played,user-read-private,user-top-read,playlist-modify-public
 
-
 # web properties
 api.react-app.url=${STATLY_APP_URL}
 statly.api.admin-email=admin@mail.com
-
-# datasource properties
 
 
 # spring mail
@@ -17,3 +14,6 @@ spring.mail.port=3025
 spring.mail.username=user
 spring.mail.password=admin
 spring.mail.protocol=smtp
+
+# JWT properties
+jwt.provider.secret=${STATLY_SECRET}
