Created OAuth2SuccessHandler class, created BadRequestException class, modified ResponseExceptionHandler and application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ api.spotify.scope=user-read-recently-played,user-read-private,user-read-email,us
 statly.api.admin-email=${STATLY_ADMIN_EMAIL}
 
 # web prop
-api.react-app.url=${STATLY_APP_URL}
+api.client.url=${STATLY_APP_URL}
 
 # datasource prop
 spring.datasource.url=${STATLY_DB_URL}
