--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,7 +4,7 @@ api.spotify.client-secret=${SPOTIFY_CLIENT_SECRET}
 api.spotify.scope=user-read-recently-played,user-read-private,user-top-read,playlist-modify-public
 
 # web properties
-api.react-app.url=${STATLY_APP_URL}
+api.client.url=${STATLY_APP_URL}
 statly.api.admin-email=admin@mail.com
 
 
