--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ api.spotify.client-secret=${SPOTIFY_CLIENT_SECRET}
 api.spotify.scope=user-read-recently-played,user-read-private,user-read-email,user-top-read,playlist-modify-public,playlist-modify-private,playlist-read-private,playlist-read-collaborative,ugc-image-upload
 
 # security prop
+server.address=${SERVER_ADDRESS}
+server.port=${PORT}
 statly.api.admin-email=${STATLY_ADMIN_EMAIL}
 
 # web prop
