Created MatrixAPIService, MapboxMatrixAPI enum, Coordinates class, modified fields and added builder to UserDTO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-# OAuth2 properties
+# Spotify API OAuth2 properties
 api.spotify.client-id=${SPOTIFY_CLIENT_ID}
 api.spotify.client-secret=${SPOTIFY_CLIENT_SECRET}
 api.spotify.scope=user-read-recently-played,user-read-private,user-read-email,user-top-read,playlist-modify-public,playlist-modify-private,playlist-read-private,playlist-read-collaborative,ugc-image-upload
+
+# Matrix API properties
+api.matrix.access-token=${MATRIX_API_TOKEN}
 
 # security prop
 statly.api.admin-email=${STATLY_ADMIN_EMAIL}
