Implemented MapboxMatrixAPIService method getDistanceMatrix, created Matrix class, modified AppConfig

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,6 +7,8 @@ api.spotify.scope=user-read-recently-played,user-read-private,user-top-read,play
 api.client.url=${STATLY_APP_URL}
 statly.api.admin-email=admin@mail.com
 
+# Matrix API properties
+api.matrix.access-token=token
 
 # spring mail
 spring.mail.host=127.0.0.1
